# jsonifymonerotx

./: .directory  .gitmodules  CMakeLists.txt  README.md  main.cpp
coverage/: coverage_test.sh
coverage/COVERAGE_REPORT/: coverage_report_recent.txt
src/: foundobjectprocessor.cpp  foundobjectprocessor.h  utils.cpp  utils.hpp
tests/: CMakeLists.txt  JsonTx.cpp  JsonTx.h  foundobjectprocessor_tests.cpp  mocks.h  txsearch_tests.cpp  utils_tests.cpp
tests/res/tx/: tx_f81ecd0381c0b89f23cffe86a799e924af7b5843c663e8c07db98a14e913585e.json
